removed footer bottom margin, coucou - solved image stretch issue , transparancy issue,

--- a/assets/css/coucou.css
+++ b/assets/css/coucou.css
@@ -21,18 +21,11 @@
 }
 
 .divCoucouHeader {
-    /* width: 100%; */
-    /* position: absolute; */
     width: 100% !important;
-    /* max-width: fit-content; */
     margin-inline: auto;
-    /* max-width: fit-content; */
-    /* text-align: left; */
-    /* top: 30%;
-    left: 10%; */
     text-align: center;
-    /* width: 783px; */
     margin: 10% 0;
+    position: relative;
 }
 
 .divCoucouHeader h2 {
@@ -157,6 +150,7 @@
     /* top: 0px; */
     /* position: absolute; */
     border-radius: 16px;
+    object-fit: cover;
 }
 
 /* #sectionCoucouCommunity .img1 {
@@ -196,12 +190,12 @@
 #sectionCoucouDiscovery img {
     /* width: 25%; */
     height: 160px;
+    object-fit: cover;
 }
 
 #sectionCoucouDiscovery .img1 {
-
-    margin-top: 20%;
-    width: 50% !important;
+    margin-top: 100px;
+    /* width: 50% !important; */
     margin-left: -10%;
     z-index: 1;
 }
@@ -223,7 +217,7 @@
     /* display: flex; */
     flex-wrap: wrap;
     margin-left: 10px;
-    width: 50%;
+    width: 44%;
 }
 
 
@@ -387,6 +381,10 @@
         height: 220px;
     }
 
+    #sectionCoucouDiscovery .img1 {
+        margin-top: 150px;
+    }
+
     #sectionGamesRewards {
         display: flex;
         flex-direction: row;
@@ -471,6 +469,10 @@
     #sectionCoucouDiscovery img {
         /* width: 25%; */
         height: 400px;
+    }
+
+    #sectionCoucouDiscovery .img1 {
+        margin-top: 265px;
     }
 
     #sectionGamesRewards {
