--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -665,7 +665,7 @@ label {
     align-items: center;
     gap: 10px;
     display: inline-flex;
-    margin: 5% 0;
+    margin: 5% 0 0;
 }
 
 .txtYellow {
